results/securify2/denial_of_service_send_loop.error.txt
WARNING: The requested image's platform (linux/amd64) does not match the detected host platform (linux/arm64/v8) and no specific platform was requested
Traceback (most recent call last):
  File "securify/__main__.py", line 286, in <module>
    main()
  File "securify/__main__.py", line 277, in main
    matches.extend(pattern.find_matches())
  File "/sec/securify/analyses/patterns/ast/default_constructor_pattern.py", line 17, in find_matches
    ast_root = self.get_ast_root()
  File "/sec/securify/analyses/patterns/ast/abstract_ast_pattern.py", line 18, in get_ast_root
    ast_root = self.analysis_context.ast
  File "/sec/securify/analyses/analysis.py", line 74, in ast
    self._ast = self.config.ast_compiler(self)
  File "securify/__main__.py", line 253, in <lambda>
    ast_compiler=lambda t: solidity_ast_compiler.compile_ast(t.source_file),
  File "/sec/securify/solidity/solidity_ast_compiler.py", line 31, in compile_ast
    compile_output = compile_standard(compile_input, allow_paths='/')
  File "/usr/local/lib/python3.7/dist-packages/py_solc-3.2.0-py3.7.egg/solc/main.py", line 181, in compile_standard
    message=error_message,
solc.exceptions.SolcError: fixed_pragma.sol:15:5: SyntaxError: No visibility specified. Did you intend to add "public"?
    constructor() {
    ^ (Relevant source part starts here and spans across multiple lines).

fixed_pragma.sol:17:30: SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0x79B483371E87d664cd39491b5f06250165e4b185". If this is not used as an address, please prepend '00'. For more information please see https://solidity.readthedocs.io/en/develop/types.html#address-literals
        refundAddresses.push(0x79B483371E87d664cd39491b5F06250165e4b185);
                             ^----------------------------------------^

fixed_pragma.sol:24:21: TypeError: "send" and "transfer" are only available for objects of type "address payable", not "address".
            require(refundAddresses[x].send(refunds[refundAddresses[x]])); // doubly bad, now a single failure on send will hold up all funds
                    ^---------------------^

        > command: `solc --allow-paths / --standard-json`
        > return code: `0`
        > stderr:
        {"errors":[{"component":"general","formattedMessage":"fixed_pragma.sol:15:5: SyntaxError: No visibility specified. Did you intend to add \"public\"?\n    constructor() {\n    ^ (Relevant source part starts here and spans across multiple lines).\n","message":"No visibility specified. Did you intend to add \"public\"?","severity":"error","sourceLocation":{"end":512,"file":"fixed_pragma.sol","start":343},"type":"SyntaxError"},{"component":"general","formattedMessage":"fixed_pragma.sol:17:30: SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: \"0x79B483371E87d664cd39491b5f06250165e4b185\". If this is not used as an address, please prepend '00'. For more information please see https://solidity.readthedocs.io/en/develop/types.html#address-literals\n        refundAddresses.push(0x79B483371E87d664cd39491b5F06250165e4b185);\n                             ^----------------------------------------^\n","message":"This looks like an address but has an invalid checksum. Correct checksummed address: \"0x79B483371E87d664cd39491b5f06250165e4b185\". If this is not used as an address, please prepend '00'. For more information please see https://solidity.readthedocs.io/en/develop/types.html#address-literals","severity":"error","sourceLocation":{"end":504,"file":"fixed_pragma.sol","start":462},"type":"SyntaxError"},{"component":"general","formattedMessage":"fixed_pragma.sol:24:21: TypeError: \"send\" and \"transfer\" are only available for objects of type \"address payable\", not \"address\".\n            require(refundAddresses[x].send(refunds[refundAddresses[x]])); // doubly bad, now a single failure on send will hold up all funds\n                    ^---------------------^\n","message":"\"send\" and \"transfer\" are only available for objects of type \"address payable\", not \"address\".","severity":"error","sourceLocation":{"end":772,"file":"fixed_pragma.sol","start":749},"type":"TypeError"}],"sources":{}}

        > stdout:
